FIX - removed wrap from every class but the card-section

--- a/app.css
+++ b/app.css
@@ -43,7 +43,7 @@ body{
 
 .row{
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 .app{
@@ -59,7 +59,7 @@ main{
 /* MENU */
 
 header{
-  width: 200px;
+  width: 300px;
   background-color: black;
 }
 
@@ -68,7 +68,6 @@ header.row{
   justify-content: space-between;
   height: 100%;
   padding: 20px;
-  flex-wrap: nowrap;
 }
 
 /* CONTAINER */
@@ -103,6 +102,10 @@ a.button {
   background-color: #131923;
 }
 
+.cards-section .row{
+  flex-wrap: wrap;
+}
+
 .cards-section h2{
   margin-bottom: 30px;
 }
@@ -120,6 +123,7 @@ a.button {
 .text-section{
   /* flex-grow: 4; */
   background-color: #131923;
+  flex-grow: 1;
 }
 
 /* FOOTER */
